# picinpics

./: LICENSE  README.md  main.py  picinpics.drawio  pyproject.toml  resize.py
